--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <nav class="hero">
             <h2 class="logo">WK<span>BS</span></h2>
             <ul>
-                <li><a href="C:\Users\Marivic Sata\Desktop\Self Website\Home\home.html">Home</a></li>
+                <li><a href="https://kylesantos05115.github.io/Home/">Home</a></li>
                 <li><a href="C:\Users\Marivic Sata\Desktop\Self Website\About Me\aboute.html">About Me</a></li>
                 <li><a href="C:\Users\Marivic Sata\Desktop\Self Website\Hobbies2\Hobbies.html">Hobbies</a></li>
                 <li><a href="C:\Users\Marivic Sata\Desktop\Self Website\Gallery\gallery.html">Gallery</a></li>
@@ -56,7 +56,7 @@
         <p class="end">CopyRigth By WKBS&copy;</p>
     </footer>
     <a class="gotopbtn" href="#"><img src="logo/arrow-up-solid.svg"></a>
-    <a href="C:\Users\Marivic Sata\Desktop\Self Website\Home\home.html" class="next" title="previous">&#8676;</a>
+    <a href="https://kylesantos05115.github.io/Home/" class="next" title="previous">&#8676;</a>
     <a href="C:\Users\Marivic Sata\Desktop\Self Website\Hobbies2\Hobbies.html" class="previous" title="next">&#8677;</a>
     </body>
 </html>
