--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
             <h2 class="logo">WK<span>BS</span></h2>
             <ul>
                 <li><a href="https://kylesantos05115.github.io/Home/">Home</a></li>
-                <li><a href="C:\Users\Marivic Sata\Desktop\Self Website\About Me\aboute.html">About Me</a></li>
-                <li><a href="C:\Users\Marivic Sata\Desktop\Self Website\Hobbies2\Hobbies.html">Hobbies</a></li>
-                <li><a href="C:\Users\Marivic Sata\Desktop\Self Website\Gallery\gallery.html">Gallery</a></li>
-                <li><a href="C:\Users\Marivic Sata\Desktop\Self Website\Interest\interest.html">Interest</a></li>
+                <li><a href="https://kylesantos05115.github.io/AboutMe/">About Me</a></li>
+                <li><a href="https://kylesantos05115.github.io/Hobbies/">Hobbies</a></li>
+                <li><a href="https://kylesantos05115.github.io/Gallery/">Gallery</a></li>
+                <li><a href="https://kylesantos05115.github.io/Interest/">Interest</a></li>
             </ul>
             <a href="C:\Users\Marivic Sata\Desktop\Self Website\Socials\socials.html" class="btn">Socials</a>
         </nav>
@@ -57,6 +57,6 @@
     </footer>
     <a class="gotopbtn" href="#"><img src="logo/arrow-up-solid.svg"></a>
     <a href="https://kylesantos05115.github.io/Home/" class="next" title="previous">&#8676;</a>
-    <a href="C:\Users\Marivic Sata\Desktop\Self Website\Hobbies2\Hobbies.html" class="previous" title="next">&#8677;</a>
+    <a href="https://kylesantos05115.github.io/Hobbies/" class="previous" title="next">&#8677;</a>
     </body>
 </html>
